# CVIP

./: .clang-format  .gitignore  README.md
Ch2-Introduction/ReadImg/: CMakeLists.txt  run.sh
Ch2-Introduction/ReadImg/src/: main.cpp
Week1/: Week 1.md
Week1/QRDetector/: CMakeLists.txt
Week1/QRDetector/src/: compile_commands.json  main.cc
Week1/Sunglasses/: CMakeLists.txt
Week1/Sunglasses/src/: main.cc
Week2/: CMakeLists.txt  adding_a_trackbar_as_controller.cpp  notes.md  using_the_mouse_for_annotation.cpp
Week2/assignment2/: CMakeLists.txt  submission.cpp
Week2/example/: CMakeLists.txt  using_the_keyboard_as_input_device copy.cpp  using_the_mouse_for_annotation.cpp
Week3/: notes.md
Week3/coin-detector/: CMakeLists.txt
Week3/coin-detector/src/: main.cc
Week3/morphological/: CMakeLists.txt
Week3/morphological/src/: main.cc
bootcamp/: 0.Installation.md  1.GetStarted.md  2.BasicImageManipulations.md  3.ImageAnnotation.md  4.ImageEnhancement.md
bootcamp/4.ImageEnhancement/src/: main.cc
bootcamp/HDR/: CMakeLists.txt
bootcamp/HDR/src/: main.cc
bootcamp/ImageEnhancement/: CMakeLists.txt
bootcamp/ImageEnhancement/src/: main.cc
scripts/: compile.sh  init.sh
test/: CMakeLists.txt
test/src/: compile_commands.json  main.cc
